@@ -2105,6 +2105,24 @@ argument_list|()
 decl_stmt|;
 if|if
 condition|(
+name|qobj
+operator|==
+literal|null
+condition|)
+block|{
+name|res
+operator|.
+name|add
+argument_list|(
+name|key
+argument_list|,
+literal|0
+argument_list|)
+expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
 name|params
 operator|.
 name|getBool
